--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Get Latest Item
 
 on:
   schedule:
-    - cron: '0 * * * *'  # 每小时触发一次
+    - cron: '0 * * * *'  # 每小时执行一次
 
 jobs:
   fetch_and_notify:
@@ -10,42 +10,30 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # 更新到 v3
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v4  # 更新到 v4
+        uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install requests beautifulsoup4
 
-      - name: Cache last_content.json
-        uses: actions/cache@v3  # 保持使用 v3
+      - name: Restore cache
+        id: cache
+        uses: actions/cache@v3
         with:
           path: last_content.json
-          key: ${{ runner.os }}-last-content
+          key: content-cache
 
       - name: Run script
-        run: python Actions/get_latest_item_for_GET.py
-
-      - name: Save last_content.json
         run: |
-          if [ -f last_content.json ]; then
-            # Define target file path
-            target_file="${{ github.workspace }}/last_content.json"
+          python Actions/get_latest_item_for_GET.py
 
-            # Check if the target file already exists
-            if [ -f "$target_file" ]; then
-              # Remove the target file if it exists
-              rm "$target_file"
-            fi
-
-            # Move the file to target path
-            mv last_content.json "$target_file"
-            echo "last_content.json saved."
-          else
-            echo "last_content.json does not exist, skipping save."
-          fi
+      - name: Save cache
+        uses: actions/cache@v3
+        with:
+          path: last_content.json
+          key: content-cache
