--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Get Latest Item
 
 on:
   schedule:
-    - cron: '5 0-16 * * *'   # UTC 时间 0 点到 15 点（对应中国时间 8 点到 0 点）
+    - cron: '5 * * * * *'   # 每小时5分触发
   workflow_dispatch:  # 允许手动触发
 
 jobs:
