--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,12 @@ jobs:
           git config --local user.name "jerryblues"
           git config --local user.email "jerry_0a@163.com"
           git add previous_result.json
-          git commit -m "Update previous result file"
-          git push
+          # 检查是否有更改
+          if ! git diff --cached --quiet; then
+            git commit -m "Update previous result file"
+            git push
+          else
+            echo "No changes to commit."
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 使用 GitHub 提供的 token
