--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ assets
 /Python_Application/pkg.pcap
 /Python_Application/pkg.txt
 /Actions/previous_result.json
+/Python_Application/previous_result.json
