--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,11 @@ on:
   workflow_dispatch:  # 允许手动触发
   schedule:
     - cron: '5 * * * *'      # get_latest_item 每小时5分触发
-    - cron: '0 13,22 * * *'  #
+    - cron: '0 5,14 * * *'   # get_stock_info 每日13:00,22:00触发
 
 jobs:
   get_latest_item:
-    if: github.event_name == 'schedule' && github.event.schedule == '5 * * * *'
+    if: github.event.schedule == '5 * * * *'
     runs-on: ubuntu-latest
 
     steps:
@@ -59,7 +59,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 使用 GitHub 提供的 token
 
   get_stock_info:
-    if: github.event_name == 'schedule' && github.event.schedule == '0 13,22 * * *'
+    if: github.event.schedule == '0 13,22 * * *'
     runs-on: ubuntu-latest
 
     steps:
