update time zone on mail.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set timezone to China
+        run: |
+            echo "TZ='Asia/Shanghai'" | sudo tee /etc/timezone
+            sudo dpkg-reconfigure -f noninteractive tzdata
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
